Add background-transparent role
A visual improvement for tables with cell that span multiple rows.
See https://github.com/rancher/rancher-product-docs/issues/715.

--- a/supplemental-files/rancher/css/site-extra.css
+++ b/supplemental-files/rancher/css/site-extra.css
@@ -579,6 +579,10 @@ tr:nth-child(even) {
   background: #fdfdfd;
 }
 
+table.background-transparent tr:nth-child(even) {
+  background: transparent;
+}
+
 .doc .admonitionblock>table {
   border-collapse: unset;
 }
