Scaffold for automated translations.
Signed-off-by: John Krug <john.krug@suse.com>

--- a/supplemental-files/rancher/partials/article.hbs
+++ b/supplemental-files/rancher/partials/article.hbs
@@ -1,5 +1,11 @@
 <article class="doc">
 {{! Custom changes start}}
+{{> disclaimer_es}}
+{{> disclaimer_de}}
+{{> disclaimer_fr}}
+{{> disclaimer_ja}}
+{{> disclaimer_pt-br}}
+{{> disclaimer_zh-cn}}
 {{#if page.componentVersion.prerelease}}
 <div class="admonitionblock warning">
 <table>
